fix(ScrollArea): fixed scrollbar visibility in iOS safari

--- a/src/components/ScrollArea/ScrollArea.module.css
+++ b/src/components/ScrollArea/ScrollArea.module.css
@@ -12,8 +12,10 @@
 .scrollable {
 	overflow: auto;
 	scrollbar-width: none;
+	-webkit-overflow-scrolling: touch;
 
 	&::-webkit-scrollbar {
+		display: none;
 		width: 0;
 		height: 0;
 	}
